# holo

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: Cargo.toml  wasm-build.sh
backend/src/: lib.rs  main.rs
benches/: bench.rs
frontend/: package.json  vite.config.ts
frontend/src/: App.tsx
react-frontend/: package.json
react-frontend/src/: App.tsx
src/: cli.rs  display.rs  holo.rs  interpolation.rs  lib.rs  main.rs  parsing.rs  polynomial.rs  webcam.rs
