[package]
name = "holo"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
image = "0.25.5"
num-complex = "0.4"
regex = "1.11.0"
chrono = "0.4.38"
nom = "7.0"
clap = { version = "4.5.20", features = ["derive"] }
opencv = "0.93.3"
rayon = "1.10.0"
minifb = "0.27.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]
