[package]
name = "holomorphic-tinkering"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
image = "0.24"
num-complex = "0.4"

[lib]
name = "backend_lib" # Name for the library
crate-type = ["cdylib", "rlib"] # Ensure Wasm and library compatibility

[[bin]]
name = "backend" # Name for the binary (CLI)
path = "src/main.rs" # Path to main.rs for the binary target
